--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <h1 class="title">How to Make a Website with HTML & CSS on your Computer</h1>
+        <h1 class="title">How to Make a Wedbsite with HTML & CSS on your Computer</h1>
         <p>In this article you will learn to make a website with HTML & CSS on your own computer instead of making it in the browser with Progate.</p>
     </body>
 </html>
