--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Create-Elwin</title>
-        <link rel="stylesheet" href="stylesheet.css">
-    </head>
-    <body>
-        <h1 class="title">How to Make a Wedbsite with HTML & CSS on your Computer</h1>
-        <p>In this article you will learn to make a website with HTML & CSS on your own computer instead of making it in the browser with Progate.</p>
-    </body>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WWalk Indonesia - Frontend C TIM A-17</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+</head>
+<body>
+    <header class="wwalk-header">
+        <div class="container">
+            <div class="header-logo">
+                <a href="#" class="logo"><img src="/html_css_tim%20A-17/images/logo.png" alt="WWalk Logo"></a>
+            </div>
+            <div class="fa fa-bars fa-2x menu-icon"></div>
+            <div class="header-nav">
+                <a href="index.html">Home</a>
+                <a href="#">Product</a>
+                <a href="about.html">About Us</a>
+                <button class="btn-daftar">Sign Up</button>
+            </div>
+        </div>
+    </header>
+    <section class="first-section">
+        <div class="container">
+            <div class="left-banner">
+                <img src="/html_css_tim%20A-17/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
+            </div>
+            <div class="right-banner">
+                <h1>WWalK</h1>
+                <h2>Terus melangkah menghapus jejakmu</h2>
+                <p>Kami berkomitmen untuk memproduksi suatu benda yang bisa Anda gunakan sebagai alas kaki dimanapun dan kapanpun Anda berada.</p>
+                <button class="btn-info">Info Produk</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+    </footer>
+</body>
 </html>
