--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WWalk Indonesia - Frontend C TIM A-17</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,800"> 
 
 </head>
 <body>
@@ -25,11 +26,11 @@
         </div>
     </header>
     <section class="first-section">
-        <div class="container">
-            <div class="left-banner">
+        <div class="container row">
+            <div class="left-column col-5">
                 <img src="/html_css_tim%20A-17/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
             </div>
-            <div class="right-banner">
+            <div class="right-column col-5">
                 <h1>WWalK</h1>
                 <h2>Terus melangkah menghapus jejakmu</h2>
                 <p>Kami berkomitmen untuk memproduksi suatu benda yang bisa Anda gunakan sebagai alas kaki dimanapun dan kapanpun Anda berada.</p>
