--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="/html_css_tim%20A-17/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
@@ -28,7 +28,7 @@
     <section class="first-section">
         <div class="container row">
             <div class="left-column col-5">
-                <img src="/html_css_tim%20A-17/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
+                <img src="/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
             </div>
             <div class="right-column col-5">
                 <h1>WWalK</h1>
