--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,800"> 
-
 </head>
 <body>
     <header class="wwalk-header">
@@ -21,7 +20,7 @@
                 <a href="index.html">Home</a>
                 <a href="#">Product</a>
                 <a href="about.html">About Us</a>
-                <button class="btn-daftar">Sign In</button>
+                <button class="btn-daftar">Sign Up</button>
             </div>
         </div>
     </header>
