--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="../html_css_tim A-17/docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="https://github.com/elwin001/A-17/blob/master/docs/assets/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
@@ -27,7 +27,7 @@
     <section class="first-section">
         <div class="container row">
             <div class="left-column col-5">
-                <img src="../html_css_tim A-17/docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
+                <img src="https://github.com/elwin001/A-17/blob/master/docs/assets/images/sepatu%20merah.png" alt="WWalk - Sepatu Merah">
             </div>
             <div class="right-column col-5">
                 <h1>WWalK</h1>
