--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="https://github.com/elwin001/A-17/blob/master/docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="https://rawcdn.githack.com/elwin001/A-17/04e4c51368a1b3c24ebef1b3d74efd72d18d828d/docs/assets/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
