--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="https://user-images.githubusercontent.com/92869765/158062881-5a5da84b-780b-4d2e-a8de-2a0be18e5930.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
