commit ke-5 elwin

--- a/index.html
+++ b/index.html
@@ -25,15 +25,23 @@
         </div>
     </header>
     <section class="first-section">
-        <div class="container row">
-            <div class="left-column col-5">
-                <img src="../html_css_tim A-17/docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah">
+        <div class="container grid-wwalk-2">
+            <div class="l-column">
+                <img src="../html_css_tim A-17/docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
             </div>
-            <div class="right-column col-5">
+            <div class="r-column">
                 <h1>WWalK</h1>
                 <h2>Terus melangkah menghapus jejakmu</h2>
                 <p>Kami berkomitmen untuk memproduksi suatu benda yang bisa Anda gunakan sebagai alas kaki dimanapun dan kapanpun Anda berada.</p>
                 <button class="btn-info">Info Produk</button>
+            </div>
+        </div>
+    </section>
+    <section class="second-section">
+        <div class="container grid-wwalk-1">
+            <div class="text-info">
+                <h1>WWalK</h1>
+                <p>Dengan lebih dari 1.000 karyawan profesional, kami berkomitmen menciptakan produk dengan kualitas terbaik di Indonesia.</p>
             </div>
         </div>
     </section>
