--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container grid-wwalk-1">
             <div class="text-info">
                 <h1>WWalK</h1>
-                <p>Dengana lebih dari 1.000 karyawan profesional, kami berkomitmen menciptakan produk dengan kualitas terbaik di Indonesia.</p>
+                <p>Dengan lebih dari 1.000 karyawan profesional, kami berkomitmen menciptakan produk dengan kualitas terbaik di Indonesia.</p>
             </div>
         </div>
     </section>
