--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="r-column">
                 <h1>WWalK</h1>
-                <h2>Teruss melangkah menghapus jejakmu</h2>
+                <h2>Terus melangkah menghapus jejakmu</h2>
                 <p>Kami berkomitmen untuk memproduksi suatu benda yang bisa Anda gunakan sebagai alas kaki dimanapun dan kapanpun Anda berada.</p>
                 <button class="btn-info">Info Produk</button>
             </div>
