--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="../html_css_A-17/docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
@@ -27,7 +27,7 @@
     <section class="first-section">
         <div class="container grid-wwalk-2">
             <div class="l-column">
-                <img src="../html_css_A-17/docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
+                <img src="https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/sepatu%20merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
             </div>
             <div class="r-column">
                 <h1>WWalK</h1>
