commit ke-04 elwin
ubah source image lagi

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="https://user-images.githubusercontent.com/92869765/158110021-bee0515b-ce2f-47b7-af0f-29b79d3d53c7.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
@@ -27,7 +27,7 @@
     <section class="first-section">
         <div class="container grid-wwalk-2">
             <div class="l-column">
-                <img src="https://raw.githubusercontent.com/elwin001/A-17/master/docs/assets/images/sepatu%20merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
+                <img src="https://user-images.githubusercontent.com/92869765/158110069-5eddbea6-7b87-4b24-b7a1-383017d17cab.png" alt="WWalk - Sepatu Merah" class="img-responsive">
             </div>
             <div class="r-column">
                 <h1>WWalK</h1>
