--- a/index.html
+++ b/index.html
@@ -45,6 +45,56 @@
             </div>
         </div>
     </section>
+    <section class="popular-product-section">
+        <div class="container popular-product">
+            <h3>Produk Terpopuler</h4>
+            <div class="product">
+                <div class="product-list">
+                    <div class="product-image">
+                        <img src="docs/assets/images/sepatu merah.png">
+                    </div>
+                    <div class="product-name">
+                        <h4>Convers</h6>
+                        <p>Desain dan model sepatu ini disukai oleh berbagai kalangan usia, mulai dari anak muda hingga orang dewasa.</p>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <div class="product-image">
+                        <img src="docs/assets/images/slip-on.png">
+                    </div>
+                    <div class="product-name">
+                        <h4>Slip-on</h6>
+                        <p>Sepatu ini membuat Anda lebih mudah menggunakannya dan hemat waktu untuk mengikat tali sepatu. Meskipun tanpa tali sepatu, desainnya tetap menarik dan colorful.</p>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <div class="product-image">
+                        <img src="docs/assets/images/casual.png">
+                    </div>
+                    <div class="product-name">
+                        <h4>Casual</h6>
+                        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <div class="product-image">
+                        <img src="docs/assets/images/sepatu merah.png">
+                    </div>
+                    <div class="product-name">
+                        <h4>Sneakers</h6>
+                        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="offer-section">
+        <div class="container-offer">
+            <h1>Dapatkan diskon 10%</h1>
+            <p>Dapatkan penawaran pada pembelian pertama melalui website ini sebesar 10%.</p>
+            <button class="btn-offer">Belanja Sekarang</button>
+        </div>
+    </section>
     <footer>
     </footer>
 </body>
