--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="first-section">
         <div class="container grid-wwalk-2">
             <div class="l-column">
-                <img src="https://docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
+                <img src="docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
             </div>
             <div class="r-column">
                 <h1>WWalK</h1>
