--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="docs/assets/images/sepatu merah.png">
                     </div>
                     <div class="product-name">
-                        <h4>Convers</h6>
+                        <h4>Confirst</h6>
                         <p>Desain dan model sepatu ini disukai oleh berbagai kalangan usia, mulai dari anak muda hingga orang dewasa.</p>
                     </div>
                 </div>
@@ -72,17 +72,17 @@
                         <img src="docs/assets/images/casual.png">
                     </div>
                     <div class="product-name">
-                        <h4>Casual</h6>
-                        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        <h4>Sneakers</h6>
+                        <p>Sepatu ini dapat menunjang penampilan sehari-harimu dengan tampilan yang stylish dan nyaman untuk digunakan. </p>
                     </div>
                 </div>
                 <div class="product-list">
                     <div class="product-image">
-                        <img src="docs/assets/images/sepatu merah.png">
+                        <img src="docs/assets/images/formal.png">
                     </div>
                     <div class="product-name">
-                        <h4>Sneakers</h6>
-                        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        <h4>Leafers</h6>
+                        <p>Sepatu ini memiliki model polos dan simple, sehingga bisa digunakan untuk penampilan formal maupun untuk penampilan kasual.</p>
                     </div>
                 </div>
             </div>
