--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="wwalk-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#" class="logo"><img src="../html_css_A-17/docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                <a href="#" class="logo"><img src="docs/assets/images/logo.png" alt="WWalk Logo"></a>
             </div>
             <div class="fa fa-bars fa-2x menu-icon"></div>
             <div class="header-nav">
@@ -27,12 +27,12 @@
     <section class="first-section">
         <div class="container grid-wwalk-2">
             <div class="l-column">
-                <img src="../html_css_A-17/docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
+                <img src="docs/assets/images/sepatu merah.png" alt="WWalk - Sepatu Merah" class="img-responsive">
             </div>
             <div class="r-column">
                 <h1>WWalK</h1>
-                <h2>Terus melangkah menghapus jejakmu</h2>
-                <p>Kami berkomitmen untuk memproduksi suatu benda yang bisa Anda gunakan sebagai alas kaki dimanapun dan kapanpun Anda berada.</p>
+                <div class="txt-1">Let’s go out</div>
+                <div class="txt-2">and RELAX</div>
                 <button class="btn-info">Info Produk</button>
             </div>
         </div>
@@ -45,7 +45,147 @@
             </div>
         </div>
     </section>
-    <footer>
-    </footer>
-</body>
-</html>
+
+    <section class="fourt-section">
+        <div class="container grid-wwalk-4">
+            <video controls class="video">
+                <source src="docs/assets/images/iklan.mp4" type="video/mp4"/>
+            </video>
+            <div class="text-wwalk-4">
+                <h1>Demo</h1>
+                <h2>Mudah & Nyaman Digunakan</h2>
+                <p>Light flexible forward. Vandeu shoes are designed for all-day comfort, so you can wear them anywhere, any time.</p>
+            </div>
+        </div>
+    </section>
+    <section class="third-section">
+        <div class="container grid-wwalk-3">
+            <div class="text-info">
+                <h1>Type</h1>
+                <p>Style and Comfortable</p>
+            </div>
+
+            <div class="card">
+                <div class="text-card">
+                  <img src="docs/assets/images/sepatu_lari.png" alt="logo" style="width:100%">
+                  <div class="container">
+                    <p>Sepatu lari ini memiliki bobot ringan dengan desain sporty sehingga nyaman dipakai untuk kamu berolahraga.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="text-card">
+              <img src="docs/assets/images/sneaker.png" alt="logo" style="width:100%">
+              <div class="container">
+                <p>Sepatu sneaker dengan bagian atas kanvas katun 100%. Sehingga nyaman dipakai untuk sehari - hari.</p>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+
+
+
+<section class="popular-product-section">
+    <div class="container popular-product">
+        <h3>Produk Terpopuler</h4>
+            <div class="product">
+                <div class="product-list">
+                    <div class="product-image">
+                        <img src="docs/assets/images/sepatu merah.png">
+                    </div>
+                    <div class="product-name">
+                        <h4>Confirst</h6>
+                            <p>Desain dan model sepatu ini disukai oleh berbagai kalangan usia, mulai dari anak muda hingga orang dewasa.</p>
+                        </div>
+                    </div>
+                    <div class="product-list">
+                        <div class="product-image">
+                            <img src="docs/assets/images/slip-on.png">
+                        </div>
+                        <div class="product-name">
+                            <h4>Slip-on</h6>
+                                <p>Sepatu ini membuat Anda lebih mudah menggunakannya dan hemat waktu untuk mengikat tali sepatu. Meskipun tanpa tali sepatu, desainnya tetap menarik dan colorful.</p>
+                            </div>
+                        </div>
+                        <div class="product-list">
+                            <div class="product-image">
+                                <img src="docs/assets/images/casual.png">
+                            </div>
+                            <div class="product-name">
+                                <h4>Sneakers</h6>
+                                    <p>Sepatu ini dapat menunjang penampilan sehari-harimu dengan tampilan yang stylish dan nyaman untuk digunakan. </p>
+                                </div>
+                            </div>
+                            <div class="product-list">
+                                <div class="product-image">
+                                    <img src="docs/assets/images/formal.png">
+                                </div>
+                                <div class="product-name">
+                                    <h4>Leafers</h6>
+                                        <p>Sepatu ini memiliki model polos dan simple, sehingga bisa digunakan untuk penampilan formal maupun untuk penampilan kasual.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="offer-section">
+                        <div class="container-offer">
+                            <h1>Dapatkan diskon 10%</h1>
+                            <p>Dapatkan penawaran pada pembelian pertama melalui website ini sebesar 10%.</p>
+                            <button class="btn-offer">Belanja Sekarang</button>
+                        </div>
+                    </section>
+                    <section>
+                        <section class="seven-section">
+                            <div class="heading">
+                                <h1>Tentang Kami</h1>
+                                <h2>WWalk</h2>
+                                <p>Merk sepatu lokal terbaik yang didesain untuk menunjang aktivitas kamu. Kami sudah hampir 30 tahun lebih #terus melangkah menghapus jejakmu. Sepatu kami memiliki desain kekinian dan dijual dalam harga yang terjangkau dan bersahabat. Kami terus berinovasi untuk #terus melangkah menghapus jejakmu.</p>
+                            </div>
+                        </section>
+                    </section>
+                    <section>
+                        <section>
+                            <section class="Introduction"></section>
+                            <div class="heading">
+                                <h1>Tentang Kami</h1>
+                                <li>
+                                    <ul>Fahuda Elwin Y as CE0 </ul>
+                                    <ul>Fordinand Pasaribu as CFO </ul>
+                                    <ul>Fitriyani Astuti as Manajer Production</ul>
+                                    <ul>Ida Bagus Made Lingga Pradirta as Manajer Production</ul>
+                                    <ul> Febita Safera Putri as Manajer Marketing</ul>
+                                </li>
+                            </div>
+                        </section>
+                    </section>
+                    <div class="footer">
+                        <div class="footer-logo">WWalK</div>
+                        <a href="#" class="logo"><img src="docs/assets/images/logo.png" alt="WWalk Logo"></a>
+                        <div class="social media-list"></div>
+                        <div class="social media-img">
+                            <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>
+                        </div>
+                        <div class="social media-name">
+                            <p>wwalks_Indonesia</p>
+                        </div>
+                        <div class="social media-img">
+                            <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>
+                        </div>
+                        <div class="social media-name">
+                            <p>wwalks_Indonesia</p>
+                        </div>
+                        <div class="social media-img">
+                            <a href="#" class="btn location"><span class="fa fa-location-dot"></span>
+                        </div>
+                        <div class="social media-name">
+                            <p>Kenanga, Strezhevoy, Rusia</p>
+                        </div>
+                
+                    </div>
+                    <footer>
+                    </footer>
+                </body>
+                </html>
